isolate spacing fix to english version
making things a bit messier....

--- a/perez/static/css/stylesheet.css
+++ b/perez/static/css/stylesheet.css
@@ -105,6 +105,9 @@ a:hover {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+    }
+
+    .perez_header_en .row {
         gap: 8px;
     }
 
